objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Detail</label>
        <referenceTo>VPPSR_Vehicle_Detail__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>registrationExpiryDate__c</fullName>
        <label>registrationExpiryDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_Expiry_Date__c</fullName>
        <label>registrationExpiryDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_Plate__c</fullName>
        <label>registrationPlate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_State__c</fullName>
        <label>registrationState</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Registration</label>
    <nameField>
        <displayFormat>REG-{0000000}</displayFormat>
        <label>Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>